--- a/blank.html
+++ b/blank.html
@@ -24,14 +24,113 @@
           <a href="#" class="global-nav-item">Contact</a>
         </div>
       </nav>
-      <div class="local-nav">
+      <nav class="local-nav">
         <div class="local-nav-links">
           <a href="#" class="product-name">AirMug Pro</a>
           <a href="#">개요</a>
           <a href="#">제품사양</a>
           <a href="#">구입하기</a>
         </div>
-      </div>
+      </nav>
+      <section class="scroll-section" id="scroll-section-0">
+        <h1>AirMug Pro</h1>
+        <div class="sticky-elem main-message">
+          <p>
+            온전히 빠져들게 하는 <br />
+            최고급 세라믹
+          </p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>
+            주변 맛을 느끼게 해주는<br />
+            주변 맛 허용 모드
+          </p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>
+            온종일 편안한 <br />
+            맞춤형 손잡이
+          </p>
+        </div>
+        <div class="sticky-elem main-message">
+          <p>
+            새롭게 입가를 <br />
+            찾아온 매혹
+          </p>
+        </div>
+      </section>
+      <section class="scroll-section" id="scroll-section-1">
+        <p>
+          <strong>보통 스크롤 영역</strong>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
+          beatae odio provident assumenda iste id iusto hic nesciunt,
+          repudiandae magni exercitationem, nemo debitis, culpa nisi quidem
+          dolores blanditiis nobis sit aperiam. Dolorem, quo natus? Quibusdam
+          tempora sequi quisquam voluptas consequatur fugit modi hic, doloremque
+          exercitationem nesciunt neque quod nobis ut ipsa pariatur provident
+          mollitia adipisci vitae, eius laborum minima! Eligendi quis similique
+          fugit atque. Molestiae est, quo ratione earum quae itaque vel dolorum
+          quod adipisci exercitationem nobis odit voluptatibus, nesciunt porro
+          necessitatibus sit placeat. Necessitatibus, minima laudantium? Id ut
+          quas beatae quibusdam reiciendis voluptate enim, ratione autem facere
+          alias quidem consequatur fugiat natus quisquam eaque! Pariatur quaerat
+          labore, possimus iste nobis nam consequuntur unde a voluptatibus
+          placeat perspiciatis repudiandae quas quibusdam dignissimos reiciendis
+          tempore, exercitationem quos? Impedit adipisci non tempore porro
+          facere soluta itaque, quos nisi velit natus, temporibus dicta? Id
+          quaerat vel incidunt modi officia a, voluptatibus beatae eum, aliquam
+          placeat vitae laborum, dolorem repellendus. Amet illo alias ea vel
+          animi eos veritatis reiciendis, labore dolorem, quasi accusantium
+          ullam, dignissimos quas aut optio repudiandae cum libero culpa
+          ratione? Ipsa omnis dolorum distinctio odio, ut ex consectetur, magnam
+          impedit asperiores consequatur quidem cumque animi, quasi
+          reprehenderit quae illo eveniet?
+        </p>
+      </section>
+      <section class="scroll-section" id="scroll-section-2">
+        <div class="sticky-elem main-message">
+          <p>
+            <small>편안한 촉감</small>
+            입과 하나 되다
+          </p>
+        </div>
+        <div class="sticky-elem desc-message">
+          <p>
+            편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를
+            하나하나 새롭게 살피고 재구성 하는 과정을 거쳐 새로운 수준의 머그,
+            AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고
+            오롯이 당신과 음료만 남게 되죠.
+          </p>
+          <div class="pin"></div>
+          <div class="sticky-elem desc-message">
+            <p>디자인 앤 퀄리티 오브 스웨덴, <br />메이드 인 차이나</p>
+            <div class="pin"></div>
+          </div>
+        </div>
+      </section>
+      <section class="scroll-section" id="scroll-section-3">
+        <p class="mid-message">
+          <strong>Retina 머그</strong><br />
+          아이디어를 광활하게 펼칠 <br />
+          아름답고 부드러운 음료 공간.
+        </p>
+        <p class="canvas-caption">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla
+          laboriosam et quidem omnis quia distinctio perspiciatis itaque iste
+          eum dicta quaerat ratione culpa autem, adipisci obcaecati commodi
+          labore deserunt, consectetur suscipit saepe. Quaerat ad ut ipsa
+          deserunt sunt, delectus optio nam voluptate est adipisci asperiores
+          maxime quo impedit magni ipsum unde repellat quod? A, asperiores.
+          Asperiores eos, neque officiis provident temporibus accusamus rem
+          fugiat tenetur nobis delectus culpa error expedita laborum sequi,
+          magni voluptate! Inventore ad itaque corrupti deserunt eius
+          perspiciatis natus! Ad iure nisi voluptates, quia beatae atque
+          praesentium odio quis odit eligendi perspiciatis vitae possimus
+          corrupti autem cumque laborum inventore, consequuntur facilis iusto
+          perferendis debitis?
+        </p>
+      </section>
+      <footer class="footer">2021, KIM DONG IL</footer>
     </div>
   </body>
 </html>
