--- a/blank.html
+++ b/blank.html
@@ -60,7 +60,7 @@
         </div>
       </section>
       <section class="scroll-section" id="scroll-section-1">
-        <p>
+        <p class="description">
           <strong>보통 스크롤 영역</strong>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel omnis
           beatae odio provident assumenda iste id iusto hic nesciunt,
