--- a/blank.html
+++ b/blank.html
@@ -132,5 +132,6 @@
       </section>
       <footer class="footer">2021, KIM DONG IL</footer>
     </div>
+    <script src="./js/my-main.js"></script>
   </body>
 </html>
